data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3449.wast
;; 8. **Test 8**:    - **Description**: A `call` instruction nested within a block where the block is interrupted by a `br` instruction, causing a jump to different depths of nesting.    - **Constraint Checked**: Checks if stack operations and types are preserved through block interruption and jumps.    - **Relation to Block Nesting**: Tests control flow management and stack correctness with `br` instructions affecting nested blocks.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $nested-call 
      (block (result i32)
        (block (result i32)
          (i32.const 42)
          (call 0)
          (br 1)
        )
        (i32.const 0)
      )
      drop
    )
    (func (param i32) (result i32)
      (i32.const 1)
    )
  )
  "type mismatch"
)